# sloane

./: .gitignore  .travis.yml  CHANGELOG.md  INSTALL.md  INSTALL.txt  LICENSE  Makefile  README.md  Setup.hs  TODO.md  cabal.config  chver  default.nix  run-hasktags  sloane.cabal  sloane.hs  sloane.md  sloane.nix
Sloane/: Bloom.hs  Config.hs  DB.hs  Download.hs  Entry.hs  GF.hs  Matrix.hs  OEIS.hs  Options.hs  Parse.hs  ParseOptions.hs  Transform.hs  Types.hs  Utils.hs
docs/: Makefile  bash-completion.md  deploy  index.md  sloane.md
static-build/: Dockerfile  README.txt  doit.sh  mk-sloane.sh
tests/: Properties.hs  cli-properties.sh
