Name:                sloane
Version:             3.0.0
Synopsis:            A command line interface to Sloane's On-Line Encyclopedia
                     of Integer Sequences
Description:         A command line interface to Sloane's On-Line Encyclopedia
                     of Integer Sequences. For usage see
                     <http://github.com/akc/sloane>.
Homepage:            http://github.com/akc/sloane
License:             BSD3
License-file:        LICENSE
Author:              Anders Claesson
Maintainer:          anders.claesson@gmail.com
Category:            Math
Build-type:          Custom
Extra-Source-Files:  README.md sloane.1

Cabal-version:       >=1.9.2

source-repository head
  type:                git
  location:            git://github.com/akc/sloane.git

Executable sloane
  Main-is:             sloane.hs
  Other-Modules:       Sloane.Types
                       Sloane.Parse
                       Sloane.ParseOptions
                       Sloane.Config
                       Sloane.GF
                       Sloane.Transform
  ghc-options:         -Wall -fno-warn-unused-do-bind
  Build-depends:       base >=3 && <5,
                       containers >=0.5,
                       transformers >=0.3,
                       attoparsec >=0.11,
                       optparse-applicative >=0.10,
                       conduit >=1,
                       conduit-extra >=1,
                       http-conduit >=2,
                       bytestring >=0.9,
                       stringsearch >=0.3,
                       text >=0.11,
                       ansi-terminal >=0.6,
                       terminal-size >=0.2,
                       filepath >=1.3,
                       directory >=1.2
